PLANET-4589 Fix Columns-Icons CTA overlapping text

--- a/assets/src/styles/campaigns/block-overrides/_campaign_columns.scss
+++ b/assets/src/styles/campaigns/block-overrides/_campaign_columns.scss
@@ -11,17 +11,15 @@ $text-transform: uppercase) {
     font-family: $header-font !important;
   }
 
-  > .container > .row {
-    margin: 0 -8px;
-
-    > [class^=col-] {
-      padding: 0 8px;
-    }
-  }
-
   .column-wrap {
     float: none;
     padding: 0 6px;
+
+    &.has-cta {
+      @include large-and-up {
+        padding-bottom: $space-md; // Leave enough room for the CTA link
+      }
+    }
 
     .attachment-container {
       background: $icon-background;
